Modify make files to build on Ubuntu trusty
The 2014.05-27 Mentor Graphics MIPS toolchain by default does not look
back at the libraries once they have been processed, this causes
linker to throw unresolved name errors even when the names are present
in the earlier processed libraries.

Another issue is that libusbdev-1.0 library required by the utilities
is not included unless explicitly mentioned in the command line.

With these suggested changes running 'make' in the top level directory
on Ubuntu 14.04 does not fail any more.

Signed-off-by: Vadim Bendebury <vbendeb@chromium.org>

--- a/usb-boot/Makefile
+++ b/usb-boot/Makefile
@@ -16,16 +16,13 @@ source := $(addprefix usb-boot/,$(source_files))
 objs := $(addprefix $(local_out)/,$(patsubst %.c,%.o,$(source_files)))
 -include $(objs:.o=.o.d)
 
-libs := \
-	-L$(dir $(ci20_lib)) -lci20
-
 all: $(local_out)/ci20-usb-boot
 $(local_out)/ci20-usb-boot: objs := $(objs)
 $(local_out)/ci20-usb-boot: libs := $(libs)
 $(local_out)/ci20-usb-boot: $(objs) $(ci20_lib) $(common_lib)
 	@mkdir -p $(dir $@)
 	@echo "CCLD    $@"
-	$(SILENT)$(CC) $(LDFLAGS) $(libs) -o $@ $(objs) $(common_lib)
+	$(SILENT)$(CC) $(LDFLAGS) -o $@ $(objs) $(dev_libs) $(common_lib)
 
 $(objs): $$(patsubst $(local_out)/%.o,usb-boot/%.c,$$@) Makefile usb-boot/Makefile
 	@mkdir -p $(dir $@)
